--- a/src/master.css
+++ b/src/master.css
@@ -64,6 +64,7 @@ body, html {
 }
 
 main {
+    padding-top: 20px;
     padding-bottom: 70px;
     background-image: url('../images/bgnew2.jpeg'); /* Указываем путь к изображению */
     background-size: cover; /* Растягиваем на весь блок */
