--- a/src/master.css
+++ b/src/master.css
@@ -380,7 +380,7 @@ main {
 .partners-section {
     text-align: center;
     padding: 20px 40px;
-    color: #f8f9fa
+    color: #f8f9fa;
     background: rgba(0, 0, 0, 0.1);
 }
 
